Bug 428040 two blank lines are inserted after signature when top-posting. p=rsx11m.pub@gmail.com,r=me,sr=Neil